--- a/Resources/views/WMS/preview.html.twig
+++ b/Resources/views/WMS/preview.html.twig
@@ -12,4 +12,31 @@
         {{ form_rest(form) }}
          <input type="submit" name="save" value="{% trans %}Add WMS{% endtrans %}"/> 
     </form>
+
+{% endblock %}
+
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{asset('js/ol/OpenLayers-2.10/examples/style_example.css') }}" />
+	<link rel="stylesheet" href="{{asset('js/ol/OpenLayers-2.10/theme/default/styleol.css') }}" />
+{% endblock %}
+{% block javascripts %}
+    <script type="application/javascript">
+    var previewWMS = {
+        title: '{{ wms.getTitle() }}',
+        url: '{{ wms.getRequestGetMapGET() }}',
+        rootlayer: '{{ wms.getRootLayer().getName() }}',
+        format: '{{ wms.getDefaultRequestGetMapFormat() }}',
+        projection: '{{ wms.getRootLayer().getDefaultSRS() }}',
+        bounds: {
+                    left: '{{ minx }}',
+                    bottom: '{{ miny }}',
+                    right:'{{ maxx }}',
+                    top: '{{ maxy }}'
+                }
+    };
+
+    </script>
+    <script src="{{asset('js/ol/OpenLayers-2.10/OpenLayers.js') }}"></script>
+    <script src="{{asset('js/ol/ol_client.js') }}"></script>		
+        
 {% endblock %}
