--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/map-box.js.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/map-box.js.twig
@@ -17,7 +17,7 @@ $.widget('mapbender.mb{{ widgetName }}', $.mapbender.mbButton, {
 
         this._super('_create');
         this.map = $('#' + this.options.target);
-        
+
         this.boxControl = new OpenLayers.Control();
         OpenLayers.Util.extend(this.boxControl, {
             draw: function() {
@@ -34,6 +34,7 @@ $.widget('mapbender.mb{{ widgetName }}', $.mapbender.mbButton, {
      * be used.
      */
     activate: function() {
+        this._super('activate');
         if(this.map.length !== 0) {
             this.map.data('mbMap').map.olMap.addControl(this.boxControl);
             this.boxControl.activate();
@@ -44,6 +45,7 @@ $.widget('mapbender.mb{{ widgetName }}', $.mapbender.mbButton, {
      * On deactivation, unbind the onClick handler
      */
     deactivate: function() {
+        this._super('deactivate');
         if(this.map.length !== 0) {
             this.boxControl.deactivate();
             this.map.data('mbMap').map.olMap.removeControl(this.boxControl);
