--- a/Resources/views/WMS/layerpreview.html.twig
+++ b/Resources/views/WMS/layerpreview.html.twig
@@ -1,8 +1,8 @@
 <div class="wmslayer">
 
-<h1>{{ layer.getTitle() }}<h1><h2>{{ layer.getName() }}</h2>
-<p class="abstract">{{ layer.getAbstract() }}</p>
-{% for layer in layer.getLayer() %}
+<h1>{{ layer.title }}<h1><h2>{{ layer.name }}</h2>
+<p class="abstract">{{ layer.abstract }}</p>
+{% for layer in layer.layer %}
   {% include "MBWMSBundle:WMS:layerpreview.html.twig" %}
 {% endfor %}
 </div>
