--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -36,39 +36,31 @@
 
 
 {% block WMSService_widget %}
-
-
-
-<div id="tabs">
-	<ul>
-		<li><a href="#tabs-1">Metadata</a></li>
-		<li><a href="#tabs-2">Contact</a></li>
-		<li><a href="#tabs-3">Service</a></li>
-		<li><a href="#tabs-4">Layers</a></li>
-		<li><a href="#tabs-5">Preview</a></li>
-		
-	</ul>
+    <ul>
+        <li><a href="#{{value.name}}-metadata">{{ "Metadata"|trans }}</a></li>
+        <li><a href="#{{value.name}}-contact">{{ "Contact"|trans }}</a></li>
+        <li><a href="#{{value.name}}-service">{{ "Service"|trans }}</a></li>
+        <li><a href="#{{value.name}}-layer">{{ "Layer"|trans }}</a></li>
+        <li><a href="#{{value.name}}-preview">{{ "Preview"|trans }}</a></li>
+    </ul>
 	
-	<div id="tabs-1">
-	 <fieldset class="metadata">
+	 <fieldset id="{{value.name}}-metadata" class="metadata">
         <legend>{% trans %}Metadata{% endtrans %}</legend>
         {{ form_row(form.title) }}
         {{ form_row(form.name) }}
         {{ form_row(form.alias) }}
         {{ form_row(form.abstract) }}
         <div>
-        {{ form_label(form.onlineResource) }}{{ 
-        form_errors(form.onlineResource) }}{{ 
-        form_widget(form.onlineResource) }} <a target="_blank" href="{{value.onlineResource}}">{% trans %}Open{% endtrans %}</a>
+            {{ form_label(form.onlineResource) }}{{ 
+            form_errors(form.onlineResource) }}{{ 
+            form_widget(form.onlineResource) }} <a target="_blank" href="{{value.onlineResource}}">{% trans %}Open{% endtrans %}</a>
         </div>
 
         {{ form_row(form.fees) }}
         {{ form_row(form.accessConstraints) }}
     </fieldset>
-    </div>
   
-    <div id="tabs-2">
-    <fieldset class="contact">
+    <fieldset id="{{value.name}}-contact" class="contact">
         <legend>{% trans %}Contact{% endtrans %}</legend>
         {{ form_row(form.contactPerson) }}
         {{ form_row(form.contactOrganization) }}
@@ -83,10 +75,8 @@
         {{ form_row(form.contactAddressPostCode) }}
         {{ form_row(form.contactAddressCountry) }}
     </fieldset>
-    </div>
     
-    <div id='tabs-3'>
-    <fieldset class="service">
+    <fieldset id="{{value.name}}-service"  class="service">
         <legend>{% trans %}Service{% endtrans %}</legend>
         {{ form_row(form.version) }}
         <hr style="color:#AAAAAA;background: #AAAAAA; height:1px">
@@ -125,26 +115,17 @@
         {{ form_row(form.symbolUserStyle) }}
         {{ form_row(form.symbolRemoteWFS) }}
     </fieldset>
-	</div>
   
-	<div id="tabs-4">
-	     {% trans %}Layer{% endtrans %}
-	        {% if form.layer|length > 0 %}
-	                {{ form_row(form.layer) }} 
-	        {% endif %}
-	</div>
+   <fieldset id="{{value.name}}-layer" class="layer">
+        <legend>{% trans %}Layer{% endtrans %}</legend>
+        {{ form_row(form.layer) }} 
+   </fieldset>
    
-   <div id="tabs-5">
-   <fieldset class="preview">
+   <fieldset id="{{value.name}}-preview" class="preview">
         <legend>{% trans %}Preview{% endtrans %}</legend>
         <div id="map" class="smallmap"></div>
-    </fieldset>
-   </div>
+   </fieldset>
    
-    </div>
-    
-  
-    
 {% endblock %}
 
 
