Unifying template inheritance. Welcome controller merged into Application controller.

--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -1,4 +1,4 @@
-{% extends "MapbenderCoreBundle::layout.html.twig" %}
+{% extends "MapbenderCoreBundle::frontend.html.twig" %}
 
 {% block title %}{{ title }}{% endblock %}
 
