--- a/Resources/views/WMS/edit.html.twig
+++ b/Resources/views/WMS/edit.html.twig
@@ -1,5 +1,5 @@
-{% extends 'MBWMSBundle:WMS:base.html.twig' %} 
-{% form_theme form 'MBWMSBundle:Form:fields.html.twig' %}
+{% extends 'MapbenderWmsBundle:WMS:base.html.twig' %} 
+{% form_theme form 'MapbenderWmsBundle:Form:fields.html.twig' %}
 
 {% block title %}Details for {{ wms.getTitle() }} {% endblock %}
 {% block heading %}WMS detail{% endblock %}
