--- a/Resources/views/WMS/index.html.twig
+++ b/Resources/views/WMS/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MBWMSBundle:WMS:base.html.twig' %} 
+{% extends 'MapbenderWmsBundle:WMS:base.html.twig' %} 
 
 {% block heading %}WMS all{% endblock %}
 
