--- a/Resources/views/WMS/layerdetails.html.twig
+++ b/Resources/views/WMS/layerdetails.html.twig
@@ -5,6 +5,6 @@
     <span class="name">{{ layer.name }}</span>
     <p class="abstract">{{ layer.abstract }}</p>
     {% for layer in layer.layer %}
-        {% include "MBWMSBundle:WMS:layerdetails.html.twig" %}
+        {% include "MapbenderWmsBundle:WMS:layerdetails.html.twig" %}
     {% endfor %}
 </div>
