--- a/Resources/views/WMS/register.html.twig
+++ b/Resources/views/WMS/register.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MBWMSBundle:WMS:base.html.twig' %} 
+{% extends 'MapbenderWmsBundle:WMS:base.html.twig' %} 
 
 {% block title %}{% trans %}Add WMS{% endtrans %}{% endblock %}
 {% block heading %}WMS add{% endblock %}
