--- a/Resources/views/WMS/confirmdelete.html.twig
+++ b/Resources/views/WMS/confirmdelete.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MBWMSBundle:WMS:base.html.twig' %} 
+{% extends 'MapbenderWmsBundle:WMS:base.html.twig' %} 
 
 {% block title %}{% trans %}Delete{% endtrans %} "{{ wms.title }}"{% endblock %}
 
