--- a/Resources/views/WMS/preview.html.twig
+++ b/Resources/views/WMS/preview.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'MBWMSBundle:Form:fields.html.twig' %}
+{% form_theme form 'MapbenderWmsBundle:Form:fields.html.twig' %}
 
 {% block content %}
     <p>'{{ getcapa_url }}'</p>
