--- a/Resources/views/WMSLayer/details.html.twig
+++ b/Resources/views/WMSLayer/details.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MBWMSBundle:WMS:base.html.twig' %}
+{% extends 'MapbenderWmsBundle:WMS:base.html.twig' %}
 {% block title %}Details for {{ wmsLayer.getTitle() }} {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
         <p class="abstract">{{ wmsLayer.getAbstract() }}</p>
         <h2>{% trans %}Layer{% endtrans %}</h2>
         {% for layer in wmsLayer.getLayer() %}
-          {% include "MBWMSBundle:WMS:layerdetails.html.twig" %}
+          {% include "MapbenderWmsBundle:WMS:layerdetails.html.twig" %}
         {% endfor %}
         {% if wmsLayer.getLayer()|length == 0 %}
             <p class="emptydata">{% trans %}No Layers{% endtrans %}</p>
