--- a/Resources/views/WMS/base.html.twig
+++ b/Resources/views/WMS/base.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %} 
+{%extends 'MapbenderCoreBundle::backend.html.twig' %}
 
 {% stylesheets '@MapbenderWmsBundle/Resources/public/style/*' %}
     <link  rel="stylesheet" href="{{ asset_url }}" />
@@ -6,7 +6,7 @@
 {% block subnavigation %}
 <nav class="action">
     <h1>WMS Navigation</h1>
-    <a href="{{ path('mb_wms_wms_register')  }}">{% trans %}register WMS{% endtrans %}</a>
+    <a href="{{ path('mapbender_wms_wms_register')  }}">{% trans %}register WMS{% endtrans %}</a>
     <form class="disabled" class="search wms_search">
         <input name="q" id="q" />
         <input type="submit" value="{% trans %}search{% endtrans %}" />
