--- a/Resources/views/WMS/layerdetails.html.twig
+++ b/Resources/views/WMS/layerdetails.html.twig
@@ -1,6 +1,6 @@
 <div class="wmslayer">
     <h3>
-    <a href="{{ path('mb_wms_wmslayer_details',{'wmsId': layer.WMS.id,'wmsLayerId':layer.id})  }}">{{ layer.title }}</a>
+    <a href="{{ path('mapbender_wms_wmslayer_details',{'wmsId': layer.WMS.id,'wmsLayerId':layer.id})  }}">{{ layer.title }}</a>
     </h3>
     <span class="name">{{ layer.name }}</span>
     <p class="abstract">{{ layer.abstract }}</p>
