--- a/src/Mapbender/CoreBundle/Resources/views/backend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/backend.html.twig
@@ -24,8 +24,8 @@
     <nav>
         <!-- TODO: Make menu more dynamic -->
         <ul class="clearfix">
-            <li><a href="" id="mapbendercore-applications-admin">Apps</a></li>
-            <li><a href="" id="mapbendercore-services-admin">Services</a></li>
+            <li><a href="{{ path('mapbender_core_application_list') }}" id="mapbendercore-applications-admin">Apps</a></li>
+            <li><a href="{{ path('mapbender_wms_wms_index')}}" id="mapbendercore-services-admin">Services</a></li>
             <li><a href="" id="mapbendercore-user-admin">Users</a></li>
             <li><a href="" id="mapbendercore-help-book">Handbook</a></li>
             <li><a href="" id="mapbendercore-user-account">My Account</a></li>
