--- a/Resources/views/WMS/index.html.twig
+++ b/Resources/views/WMS/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'MBWMSBundle:WMS:base.html.twig' %} 
 
-{% block heading %}{{ "WMS index"||% endblock %}
+{% block heading %}{{ "WMS index"|trans }}{% endblock %}
 
 {% block content %}
 
