--- a/src/Mapbender/WmsBundle/Resources/views/WMS/index.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/WMS/index.html.twig
@@ -23,6 +23,6 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path("mb_wms_wms_index",{"offset":prevOffset}) }}">{% trans %}Previous{% endtrans %}</a> 
-    <a href="{{  path("mb_wms_wms_index",{"offset": nextOffset}) }}">{% trans %}Next{% endtrans %}</a>
+    <a href="{{ path("mapbender_wms_wms_index",{"offset":prevOffset}) }}">{% trans %}Previous{% endtrans %}</a> 
+    <a href="{{  path("mapbender_wms_wms_index",{"offset": nextOffset}) }}">{% trans %}Next{% endtrans %}</a>
 {% endblock %}
