--- a/src/Mapbender/CoreBundle/Resources/views/backend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/backend.html.twig
@@ -33,6 +33,7 @@
         </ul>
     </nav>
 
+    {% block subnavigation %}{% endblock %}
     {% block content %}{% endblock %}
 
     <script type="text/javascript" src="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/jquery-1.4.4.js') }}"></script>
