--- a/src/Mapbender/WmsBundle/Resources/views/WMS/register.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/WMS/register.html.twig
@@ -15,7 +15,7 @@
    			<legend>Capabilities-URL laden</legend>
 			<div>
                 <label for="getcapa_url">{% trans %}Capabilities URL{% endtrans %}</label> 
-                <input type="url" name="getcapa_url" id="getcapa_url" value="" />
+                <input type="url" class="url" name="getcapa_url" id="getcapa_url" value="{{  getcapa_url is defined ? getcapa_url : ''}}" />
             </div>
 {#
             <div>
