--- a/src/Mapbender/WmsBundle/Resources/views/WMS/update.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/WMS/update.html.twig
@@ -1,7 +1,8 @@
 {% extends 'MapbenderWmsBundle:WMS:base.html.twig' %} 
 {% form_theme form 'MapbenderWmsBundle:Form:fields.html.twig' %}
+{% form_theme newForm 'MapbenderWmsBundle:Form:fields.html.twig' %}
 
-{% block title %}Details for {{ wms.getTitle() }} {% endblock %}
+{% block title %}Update WMS {{ wms.getTitle() }} {% endblock %}
 {% block heading %}WMS detail{% endblock %}
 
 
@@ -17,11 +18,17 @@
 
 {% block content %}
     <script src="{{asset('bundles/mbwms/js/preview.js') }}"></script>	
-
+    <h2>Current</h2>
     <form class="wms tabbable" action="{{ path('mapbender_wms_wms_save',{'wmsId':wms.id}) }}" method="POST">
         {{ form_widget(form) }}
         {{ form_rest(form) }}
-        <button type="submit">{% trans %}Save{% endtrans %}</button>
+    </form>
+    <h2>Updated</h2>
+    <form class="wms tabbable" action="{{ path('mapbender_wms_wms_save',{'wmsId':wms.id}) }}" method="POST">
+        {{ form_widget(newForm) }}
+        {{ form_rest(newForm) }}
+        <button type="submit">{% trans %}Update{% endtrans %}</button>
+        <a href="{{ path("mapbender_wms_wms_edit",{'wmsId':wms.id}) }}">{% trans %}Cancel{% endtrans %}</a>
     </form>
 {% endblock %}
 
@@ -50,3 +57,4 @@
     <script src="{{asset('js/ol/OpenLayers-2.10/OpenLayers.js') }}"></script>
     <script src="{{asset('js/ol/ol_client.js') }}"></script>
 {% endblock %}
+
