added username and password

--- a/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
@@ -58,6 +58,8 @@
 
         {{ form_row(form.fees) }}
         {{ form_row(form.accessConstraints) }}
+        {{ form_row(form.username) }}
+        {{ form_row(form.password) }}
     </fieldset>
   
     <fieldset id="{{value.name}}-contact" class="contact">
