WMSLayer parse scalehint

--- a/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
@@ -17,6 +17,8 @@
         {{ form_row(form.cascaded) }}
         {{ form_row(form.opaque) }}
         {{ form_row(form.noSubset) }} 
+        {{ form_row(form.metadataurl) }}
+        {{ form_row(form.dataurl) }} 
     </div>
     <div>
         {{ form_row(form.fixedWidth) }}
